--- a/styles/typography.css
+++ b/styles/typography.css
@@ -10,7 +10,7 @@ body > header > h1 {
 }
 
 body > header > h2 {
-  letter-spacing: 0.01rem;
+  letter-spacing: 0.009rem;
 }
 
 body > article > header > h2 {
